--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -11,7 +11,7 @@
     color: #8d5f26;
 
     text-transform: uppercase;
-    width: 150px;
+    text-align: center;
 }
 
 .img{
@@ -24,8 +24,24 @@
     text-transform: uppercase;
     color: #8d5f26;
     font-size: 35px;
+
 }
 .enlaces:hover{
     background-color: #8d5f26;
     color: black;
+}
+
+.boton{
+    color: black;
+    background-color: red;
+    font-size: 35px;
+    cursor: pointer;
+}
+
+.botonelim{
+    color: black;
+    background-color: red;
+    font-size: 35px;
+    cursor: pointer;
+    margin-right: 20px;
 }
