--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -2,7 +2,6 @@
     font-size: 40px;
     color: #8d5f26;
     text-transform: uppercase;
-
     text-align: center;
 }
 
@@ -14,4 +13,17 @@
     width: 200px;
     height: 150px;
     padding: 20px;
+}
+
+.enlaces{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #ffb04f;
+    background-color: #723f02;
+    font-size: 35px;
+    margin-right: 40px;
+}
+.enlaces:hover{
+    color: #723f02;
+    background-color: #ffb04f;
 }
